syntax = "proto3";

option csharp_namespace = "Sisa.Blog.Api.V1.Tags.Queries";

package sisa.blog.api;

import "google/protobuf/wrappers.proto";
import "sisa/libs/common/queries/paging_query.proto";

message FilterTagsQuery {
  string name = 1;
}

message GetTagsQuery {
  FilterTagsQuery filter = 1;
  sisa.common.PagingQuery paging = 2;
}

message FindTagByIdQuery {
  string id = 1;
}

