syntax = "proto3";

option csharp_namespace = "Sisa.Blog.Api.V1.Tags.Responses";

package sisa.blog.api;

// import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "sisa/libs/common/responses/paging_response.proto";

message TagResponse {
  string id = 1;
  string name = 2;
  string slug = 3;
  google.protobuf.StringValue description = 4;
}

message SingleTagResponse {
  TagResponse value = 1;
}

message ListTagsResponse {
  repeated TagResponse value = 1;
  sisa.common.PagingResponse paging = 2;
}
